[package]
name = "graph_rl"
version = "0.1.0"
edition = "2021"
authors = ["Travis Hammond <dashdeckers@gmail.com>"]
repository = "https://github.com/dashdeckers/rl_toolkit"
description = "A toolkit for reinforcement learning research."
keywords = [
    "reinforcement learning",
    "machine-learning",
    "actor-critic",
    "planning",
    "graph",
]
license = "MIT"
categories = ["research"]


[dependencies]

# Developer candy
anyhow = "1.0.70"
auto_ops = "0.3.0"
ordered-float = { version = "4.1.1", features = ["serde"] }

# GUI
eframe = "0.23.0"
egui = "0.23.0"
egui_plot = "0.23.0"
egui_graphs = { version = "0.15.0", features = ["events"] }

# CLI
clap = { version = "4.2.4", features = ["derive"] }

# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# Random
rand_distr = "0.4.3"
rand = { version = "0.8.5", features = ["std"] }

# Graph
petgraph = "0.6.3"

# Dataframes
polars = { version = "0.34.2", features = ["parquet"] }

# Python Interop
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }

# Serialization
serde = { version = "1.0.192", features = ["derive"] }
ron = "0.8.1"

# Docs
simple-mermaid = "0.1.0"


# Enabling katex on docs.rs
[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --open
rustdoc-args = [
    "--html-in-header",
    "katex-header.html",
]

# Deep Learning (config gate: I didn't install CUDA on my windows machine)
[target.'cfg(windows)'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }

[target.'cfg(not(windows))'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }

